logs/gui_run_last.log
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 597
    out_path.write_text("\n".join([f\"{Path(self.images[i]).name}: {r}\" for i, r in self.qc_list]), encoding="utf-8")
                                     ^
SyntaxError: unexpected character after line continuation character
